entity history state
